ncp-features-example/2.4.1-cert-chain-ingress/nginx-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-cert-chain
  namespace: ncp-feature
  labels:
    feature: cert-chain 
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: tcp
  selector:
    feature: cert-chain
